--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:T9PS9cF6wzNeuGrmiJlCvfYxjeRaYfhW9qPUBqWCt80=
 APP_DEBUG=true
 APP_TIMEZONE="Asia/Jakarta"
 APP_URL=https://localhost
@@ -41,6 +41,13 @@ SDT_DB_PORT=3306
 SDT_DB_DATABASE=si-sdt
 SDT_DB_USERNAME=root
 SDT_DB_PASSWORD=
+
+STUDENT_DB_CONNECTION=student
+STUDENT_DB_HOST=127.0.0.1
+STUDENT_DB_PORT=3306
+STUDENT_DB_DATABASE=si-student
+STUDENT_DB_USERNAME=root
+STUDENT_DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
