feat: sdt update

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:T9PS9cF6wzNeuGrmiJlCvfYxjeRaYfhW9qPUBqWCt80=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE="Asia/Jakarta"
 APP_URL=https://localhost
